--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     environment:
       - ACCESS_TOKEN=${ACCESS_TOKEN}
       - REDIS_URL=${REDIS_URL}
+      - CLIENT_ORIGIN=${CLIENT_ORIGIN}
     restart: always
     depends_on:
       - db
