--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,10 @@ services:
       - GPT_ACCESS_TOKEN=${GPT_ACCESS_TOKEN}
       - REDIS_URL=${REDIS_URL}
       - CLAUDE_ACCESS_TOKEN=${CLAUDE_ACCESS_TOKEN}
+      - LINE_CLIENT_ID=${LINE_CLIENT_ID}
+      - LINE_CLIENT_SECRET=${LINE_CLIENT_SECRET}
+      - LINE_CHANNEL_TOKEN=${LINE_CHANNEL_TOKEN}
+      - BACKEND_HOST=${BACKEND_HOST}
     restart: always
     depends_on:
       - db
